--- a/angular.json
+++ b/angular.json
@@ -2,6 +2,11 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "newProjectRoot": "projects",
+  "schematics": {
+    "@schematics/angular:component": {
+      "style": "scss"
+    }
+  },
   "projects": {
     "AngularProject": {
       "projectType": "application",
@@ -28,8 +33,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.css",
-              "src/assets/fonts/custom_fonts.css"
+              "src/styles.scss",
+              "src/assets/fonts/custom_fonts.scss"
             ],
             "scripts": []
           },
