--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@angular/common": "^14.2.1",
     "@angular/compiler": "^14.2.1",
     "@angular/core": "^14.2.1",
+    "@angular/fire": "^7.6.1",
     "@angular/forms": "^14.2.1",
     "@angular/material": "^13.3.9",
     "@angular/platform-browser": "^14.2.1",
     "@angular/platform-browser-dynamic": "^14.2.1",
     "@angular/router": "^14.2.1",
+    "firebase": "^9.22.1",
+    "firebase-tools": "^12.3.1",
     "ng-time-past-pipe": "^3.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
